# anton_vk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: build.bat  gooch.frag.glsl  lambert.frag.glsl  mesh.vert.glsl  vertexColors.frag.glsl
src/: anton_vk.cpp  assert.h  avk.cpp  build.bat  common.h  device.cpp  logger.cpp  logger.h  main.cpp  renderprog.cpp  resources.cpp  run.bat  run_debug.bat  scene.cpp  scene.h  shaders.cpp  swapchain.cpp  typedefs.h  vertex_type.h  vk_base.cpp  vk_base.h  vk_check.h  vk_common.h  vk_device.cpp  vk_device.h  vk_render.cpp  vk_render.h  vk_renderprograms.cpp  vk_renderprograms.h  vk_resources.cpp  vk_resources.h  vk_surface.cpp  vk_surface.h  vk_swapchain.cpp  vk_swapchain.h  vma.cpp
